--- a/.github/workflows/arduinoCompile.yaml
+++ b/.github/workflows/arduinoCompile.yaml
@@ -28,6 +28,6 @@ jobs:
         python -m pip install --upgrade pip
         pip install --upgrade platformio
     - name: Install library dependencies
-      run: pio lib -g install 1
+      run: pio lib -g install	Dabble 'Adafruit Motor Shield V2' 'Adafruit NeoPixel'
     - name: Run PlatformIO
-      run: pio run -e <ID_1> -e <ID_2> -e <ID_N>
+      run: pio run -e uno
