--- a/.github/workflows/arduinoCompile.yaml
+++ b/.github/workflows/arduinoCompile.yaml
@@ -28,6 +28,6 @@ jobs:
         python -m pip install --upgrade pip
         pip install --upgrade platformio
     - name: Install library dependencies
-      run: pio lib -g install	Dabble 'Adafruit Motor Shield V2' 'Adafruit NeoPixel'
+      run: pio lib -g install	Dabble "adafruit/Adafruit Motor Shield V2 Library@^1.1.0" "adafruit/Adafruit NeoPixel@^1.10.3"
     - name: Run PlatformIO
       run: pio run -e uno
