--- a/.github/workflows/arduinoCompile.yaml
+++ b/.github/workflows/arduinoCompile.yaml
@@ -30,4 +30,5 @@ jobs:
     - name: Install library dependencies
       run: pio lib -g install	Dabble "adafruit/Adafruit Motor Shield V2 Library@^1.1.0" "adafruit/Adafruit NeoPixel@^1.10.3"
     - name: Run PlatformIO
+      working-directory: /SOFTWARE/SMARS_DABBLE_SHIELD/.platformio
       run: pio run -e uno
