--- a/SOFTWARE/SMARS_DABBLE_SHIELD/platformio.ini
+++ b/SOFTWARE/SMARS_DABBLE_SHIELD/platformio.ini
@@ -15,15 +15,13 @@ platform = atmelavr
 board = uno
 framework = arduino
 board_build.mcu = atmega328p
+upload_speed = 115200
+; any port that starts with /dev/ttyUSB
+upload_port = /dev/cu.usbmodem*
+monitor_speed = 115200
+monitor_port = /dev/cu.usbmodem*
 lib_deps = 
 	stempedia/Dabble@^1.5.2
 	adafruit/Adafruit Motor Shield V2 Library@^1.1.0
 	adafruit/Adafruit NeoPixel@^1.10.3
-
-upload_speed = 115200
-upload_port = /dev/ttyUSB*; any port that starts with /dev/ttyUSB
-
-;upload_port = COM[13]; COM1 or COM3
-
-monitor_speed = 115200
-monitor_port = /dev/ttyUSB*
+;upload_port = COM[13]; COM1 or COM
